@@ -34,11 +34,12 @@ import jodd.typeconverter.TypeConverterManager;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Supplier;
 
 /**
  * Just a base class of {@link jodd.json.JsonParser} that contains
@@ -46,10 +47,20 @@ import java.util.Set;
  */
 public abstract class JsonParserBase {
 
+	protected static final Supplier<Map> HASMAP_SUPPLIER = LinkedHashMap::new;
+	protected static final Supplier<Map> LAZYMAP_SUPPLIER = LazyMap::new;
+
+	protected static final Supplier<List> ARRAYLIST_SUPPLIER = ArrayList::new;
+	protected static final Supplier<List> LAZYLIST_SUPPLIER = LazyList::new;
+
+	protected Supplier<Map> mapSupplier = HASMAP_SUPPLIER;
+	protected Supplier<List> listSupplier = ARRAYLIST_SUPPLIER;
+	protected List<String> classnameWhitelist;
+
 	/**
 	 * Creates new instance of {@link jodd.json.MapToBean}.
 	 */
-	protected MapToBean createMapToBean(String classMetadataName) {
+	protected MapToBean createMapToBean(final String classMetadataName) {
 		return new MapToBean(this, classMetadataName);
 	}
 
@@ -60,13 +71,14 @@ public abstract class JsonParserBase {
 	 * It returns a collection.
 	 * Later, the collection will be converted into the target type.
 	 */
-	protected Collection<Object> newArrayInstance(Class targetType) {
+	@SuppressWarnings("unchecked")
+	protected Collection<Object> newArrayInstance(final Class targetType) {
 		if (targetType == null ||
 			targetType == List.class ||
 			targetType == Collection.class ||
 			targetType.isArray()) {
 
-			return new ArrayList<>();
+			return listSupplier.get();
 		}
 
 		if (targetType == Set.class) {
@@ -74,7 +86,7 @@ public abstract class JsonParserBase {
 		}
 
 		try {
-			return (Collection<Object>) targetType.newInstance();
+			return (Collection<Object>) targetType.getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			throw new JsonException(e);
 		}
@@ -83,14 +95,14 @@ public abstract class JsonParserBase {
 	/**
 	 * Creates new object or a <code>HashMap</code> if type is not specified.
 	 */
-	protected Object newObjectInstance(Class targetType) {
+	protected Object newObjectInstance(final Class targetType) {
 		if (targetType == null ||
 			targetType == Map.class) {
 
-			return new HashMap();
+			return mapSupplier.get();
 		}
 
-		ClassDescriptor cd = ClassIntrospector.lookup(targetType);
+		ClassDescriptor cd = ClassIntrospector.get().lookup(targetType);
 
 		CtorDescriptor ctorDescriptor = cd.getDefaultCtorDescriptor(true);
 		if (ctorDescriptor == null) {
@@ -98,6 +110,7 @@ public abstract class JsonParserBase {
 		}
 
 		try {
+//			return ClassUtil.newInstance(targetType);
 			return ctorDescriptor.getConstructor().newInstance();
 		} catch (Exception e) {
 			throw new JsonException(e);
@@ -107,7 +120,7 @@ public abstract class JsonParserBase {
 	/**
 	 * Injects value into the targets property.
 	 */
-	protected void injectValueIntoObject(Object target, PropertyDescriptor pd, Object value) {
+	protected void injectValueIntoObject(final Object target, final PropertyDescriptor pd, final Object value) {
 		Object convertedValue = value;
 
 		if (value != null) {
@@ -129,7 +142,7 @@ public abstract class JsonParserBase {
 	/**
 	 * Converts type of the given value.
 	 */
-	protected Object convertType(Object value, Class targetType) {
+	protected Object convertType(final Object value, final Class targetType) {
 		Class valueClass = value.getClass();
 
 		if (valueClass == targetType) {
@@ -137,7 +150,7 @@ public abstract class JsonParserBase {
 		}
 
 		try {
-			return TypeConverterManager.convertType(value, targetType);
+			return TypeConverterManager.get().convertType(value, targetType);
 		}
 		catch (Exception ex) {
 			throw new JsonException("Type conversion failed", ex);
